Converted game into StateBasedGame, added splash
NOTE: Splash is disabled when AdventuriaGame.DEBUG_MODE = true

Started experimenting with culling and removed redundant ChunkRegsitry type.